fix: Fixed footer position on mobile

--- a/frontend/src/styles/components/_footer.css
+++ b/frontend/src/styles/components/_footer.css
@@ -1,15 +1,14 @@
 footer {
   display: flex;
-  gap: 1.5rem;
   color: white;
   background-color: var(--clr-neutral-800);
-  padding: 4rem 0rem 2rem;
+  padding: 4rem 0rem 2rem 0rem;
 }
 
 .external-pages {
   display: flex;
   gap: 2rem;
-  margin: 0.5rem 0rem;
+  margin: 1rem 0rem;
 
   a {
     color: var(--clr-neutral-100);
@@ -22,5 +21,5 @@ footer {
 
 .copyright p {
   font-size: 12px;
-  color: var(--clr-neutral-200);
+  color: var(--clr-neutral-300);
 }
